homepage clean up

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -36,7 +36,7 @@ const { currentPage } = Astro.props
 
     transform-origin: 0 0;
     display: flex;
-    justify-content: left;
+    justify-content: left; /* no space-around because mobile app bars is a shit*/
 
     transform: rotate(90deg) translateY(-2rem);
     text-align: left;
