--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -36,6 +36,7 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
     flex-wrap: wrap;
     margin-left: 1rem;
     width: calc(100% - 2rem);
+    margin-bottom: 1rem;
   }
 
   .tag {
