--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro"
-import Gallery from "../components/interactive/Gallery.svelte";
+import Gallery from "../components/interactive/Gallery.svelte"
 import * as gallery from "./worksList"
 ---
 
@@ -40,7 +40,6 @@ import * as gallery from "./worksList"
     bg="linear-gradient(90deg, rgba(2,153,40,1) 0%, rgba(0,179,135,1) 100%)"
     client:idle
   />
-  
   <!-- cheeky empty unicode div to add dynamic bottom padding  -->
   <div id="shh">⠀</div>
 </BaseLayout>
