--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,9 +7,8 @@ import Navigation from '../components/Navigation.astro'
 const {
     pageTitle = 'no title',
     display = 'flex',
-    backgroundStyle = "black" //ohBoyAnotherOne
+    backgroundStyle = "black"
 } = Astro.props
-
 
 const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
 ---
@@ -23,6 +22,11 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>{capitalizeTitle || "Vlusk's site"}</title>
     <style define:vars={{backgroundStyle}}>
+      @keyframes hueshift {
+        0% { filter: hue-rotate(0deg); }
+        100% { filter: hue-rotate(360deg); }
+      }
+      
       #page {
         background: var(--backgroundStyle);
         background-size: cover;
@@ -55,6 +59,9 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
         justify-content: start;
       }
 
+      .rainbow {
+        animation: hueshift 10s linear infinite;
+      }
 
       @media only screen and (max-width: 849px) {
         .block {
@@ -69,12 +76,16 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
   </head>
   <body>
     <Navigation currentPage={pageTitle}/>
-    <div id="page" class={display}>
+    <div id="page" class={display + " " + (pageTitle === 'home' ? 'rainbow' : '')}>
       <slot />
     </div>
   </body>
   <script>
     const page = document.querySelector<HTMLElement>("#page")!
     page.style.minHeight = window.innerHeight + "px"
+
+    window.onresize = () => {
+      page.style.minHeight = window.innerHeight + "px"
+    }
   </script>
 </html>
