add rss and fix socials title

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -20,7 +20,7 @@ const { currentPage } = Astro.props
     <span class="long">Blog</span>
     <span class="short">BLG</span>
   </a>
-  <a class={currentPage === "contact" ? "active" : ""} href="/socials">
+  <a class={currentPage === "socials" ? "active" : ""} href="/socials">
     <span class="long">Socials</span>
     <span class="short">SCL</span>
   </a>
