--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -37,7 +37,7 @@ const socials: LinkButton[] = [
   },
 ]
 ---
-<BaseLayout pageTitle="contact" display="full-screen flex" backgroundStyle="linear-gradient(135deg,rgba(0,0,0,1) 0%,rgba(4,2,113,1) 100%)">
+<BaseLayout pageTitle="socials" display="full-screen flex" backgroundStyle="linear-gradient(135deg,rgba(0,0,0,1) 0%,rgba(4,2,113,1) 100%)">
   <div id="button-container">
     {socials.map((button) =>
       <a target="_blank" href={button.url || 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'}>
