--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -64,7 +64,7 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
   }
 
   a {
-    color: whitesmoke;
+    color: whitesmoke !important;
     background: none !important;
   }
 </style>
