--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -4,7 +4,7 @@ import Gallery from "../components/interactive/Gallery.svelte"
 import * as gallery from "./worksList"
 ---
 
-<BaseLayout pageTitle="works" display="full-screen" backgroundStyle="#292929">
+<BaseLayout pageTitle="works" display="full-screen" description="A compilation of the artworks I did" backgroundStyle="#292929">
   <Gallery
     kind="image"
     title="Illustration"
