--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,8 @@ import Navigation from '../components/Navigation.astro'
 const {
     pageTitle = 'no title',
     display = 'flex',
-    backgroundStyle = "black"
+    backgroundStyle = "black",
+    description = "My site hell yeah."
 } = Astro.props
 
 const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
@@ -21,6 +22,9 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>{capitalizeTitle || "Vlusk's site"}</title>
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/699790035704217643/1091562525717446656/dark_mode.png" />
+
     <style define:vars={{backgroundStyle}}>
       @keyframes hueshift {
         0% { filter: hue-rotate(0deg); }
@@ -34,6 +38,7 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
         background-repeat: no-repeat;
         background-attachment: fixed;
         margin-left: 2rem;
+        min-height: 100%;
       }
 
       .flex {
