--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
 
 <BaseLayout pageTitle={"blog"} display="block" backgroundStyle="linear-gradient(156deg, rgba(36,0,0,1) 0%, rgba(121,9,58,1) 100%)">
     <h1>Blog posts</h1>
-    <p>random bullshit for the whole family to enjoy</p>
+    <p>Discarded parts of the brain for the whole family to not enjoy</p>
     
 
     <h3 style="padding-bottom:0">available tags</h3>
