--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,6 +22,7 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>{capitalizeTitle || "Vlusk's site"}</title>
+    <meta property="og:title" content={capitalizeTitle || "Vlusk's site"} />
     <meta property="og:description" content={description} />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/699790035704217643/1091562525717446656/dark_mode.png" />
 
