add helmet color

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,6 +25,7 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
     <meta property="og:title" content={capitalizeTitle || "Vlusk's site"} />
     <meta property="og:description" content={description} />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/699790035704217643/1091562525717446656/dark_mode.png" />
+    <meta content="#00F0F0" data-react-helmet="true" name="theme-color" />
 
     <style define:vars={{backgroundStyle}}>
       @keyframes hueshift {
