updated works list added image title to works page obsidian

--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -20,6 +20,11 @@ const socials: LinkButton[] = [
     color: 'linear-gradient(21deg, rgba(0,123,251,1) 0%, rgba(0,170,219,1) 100%);',
     tooltip: 'Short/WIP contents + more (DM\'s are open)'
   },{
+    label: 'Mastodon',
+    url: 'https://mastodon.social/@vlusky_husky',
+    color: 'linear-gradient(21deg, rgba(0,123,251,1) 0%, rgba(0,170,219,1) 100%);',
+    tooltip: 'Separate Twitter Art Archive'
+  },{
     label: 'Bandcamp',
     url: 'https://vlusky.bandcamp.com/',
     color: 'linear-gradient(21deg, rgba(79,0,251,1) 0%, rgba(219,0,218,1) 100%);',
