--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -57,4 +57,13 @@ import * as gallery from "./worksList"
   .hide {
     visibility: hidden;
   }
+
+  #tooltip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    user-select: none;
+    pointer-events: none;
+    z-index: 2;
+  }
 </style>
