--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -22,7 +22,7 @@ const socials: LinkButton[] = [
   },{
     label: 'Mastodon',
     url: 'https://mastodon.social/@vlusky_husky',
-    color: 'linear-gradient(21deg, rgba(0,123,251,1) 0%, rgba(0,170,219,1) 100%);',
+    color: 'linear-gradient(50deg, rgba(146,78,198,1) 0%, rgba(15,232,245,1) 100%)',
     tooltip: 'Separate Twitter Art Archive'
   },{
     label: 'Bandcamp',
