--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -14,17 +14,25 @@ const bg = frontmatter.thumbnail
   description={frontmatter.description}
 >
   <div id="bg"></div>
-  <div id="header" class="text-shadow">
-    <h1>{frontmatter.title}</h1>
-    <h2>by {frontmatter.author} on {frontmatter.pubDate.slice(0, 10)}</h2>
-  </div>
   <div id="content" class="text-shadow">
+    <div id="header" class="text-shadow">
+      <h1>{frontmatter.title}</h1>
+      <h2>by {frontmatter.author} on {frontmatter.pubDate.slice(0, 10)}</h2>
+    </div>
     <slot />
   </div>
   <BackButton link="/blog" />
 </BaseLayout>
 
 <style define:vars={{ bg }} is:global>
+  /*
+    the CSS for the table and codeblocks are FUCKED
+	
+    [todo) set proper css for tables and codeblocks
+    [todo) change the "body" size to be 80ch maximum
+  */
+  
+  
   #bg {
     content: " ";
     display: block;
@@ -78,6 +86,38 @@ const bg = frontmatter.thumbnail
     max-width: 100%;
     max-height: 80vh;
   }
+
+  #content {
+    max-width: 80ch;
+    margin: auto;
+  }
+
+  .yt {
+    margin: 1.5rem;
+    margin-top: 0rem;
+  }
+
+  table {
+    margin: 1.5rem;
+    margin-top: 0;
+    border-collapse: collapse;
+    background: #000000a1;
+  }
+
+  td, th {
+    padding: 0.5rem;
+    border: 2px solid #000000aa;
+    border-style: solid;
+  }
+
+  blockquote {
+    background-color: #000000a1;
+    margin: 1rem;
+    margin-top: 0;
+  }
+
+
+
 </style>
 
 <script>
