--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,12 +1,13 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro'
 import BlogThumbnail from '../../components/BlogThumbnail.astro'
-const allPosts = await Astro.glob('../../pages/posts/*.md')
+const allPosts = await Astro.glob('../../pages/posts/*.{md,mdx}')
 allPosts.reverse()
 const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
 ---
 
 <BaseLayout pageTitle={"blog"} display="block" backgroundStyle="linear-gradient(156deg, rgba(36,0,0,1) 0%, rgba(121,9,58,1) 100%)">
+  <div class="content">
     <h1>Blog posts</h1>
     <p>Discarded parts of the brain for the whole family to not enjoy</p>
     
@@ -26,6 +27,7 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
           thumbnail={post.frontmatter.thumbnail}
       ></BlogThumbnail>)}
     </div>
+  </div>
 
 </BaseLayout>
 
@@ -66,5 +68,10 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
   a {
     color: whitesmoke !important;
     background: none !important;
+  }
+
+  .content {
+    max-width: 80ch;
+    margin: auto;
   }
 </style>
