--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:wght@200&display=swap');
 :root {
-  font-family:  'Poppins', Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -15,6 +14,8 @@
 }
 
 html, body {
+  font-family: 'Poppins', 'Noto Sans JP', Helvetica, Arial, sans-serif;
+
   text-align: left;
   background: #000000;
   color: white;
