migrate all image assets from discord to imgcdn

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
 ---
-<BaseLayout pageTitle="home" backgroundStyle="url(https://cdn.discordapp.com/attachments/1027882514548789279/1079729679981891624/background-glower-thin.png)">
+<BaseLayout pageTitle="home" backgroundStyle="url(https://s6.imgcdn.dev/ZJvQV.png)">
   <img id="bg"/>
   <div id="curtain"></div>
   <svg
@@ -48,7 +48,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
   image.onload = () => {
     curtain.style.opacity = "0"
   }
-  image.src = "https://cdn.discordapp.com/attachments/1027882514548789279/1079729679981891624/background-glower-thin.png"
+  image.src = "https://s6.imgcdn.dev/ZJvQV.png"
 </script>
 
 <style>
