--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -55,6 +55,7 @@ const bg = frontmatter.thumbnail
     -webkit-backdrop-filter: blur(10px);
     border: solid rgba(255, 255, 255, 0.24);
     border-width: 3px 3px 3px 3px;
+    margin-bottom: 2rem;
   }
 
   a {
