--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -54,15 +54,8 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
     transition: all 0.2s ease;
   }
 
-
-  .tags:has(div:hover) > a > div {
-    filter: blur(2px);
-  }
-
-  .tags:has(div:hover) > a:hover > div {
-    filter: blur(0);
-    transform: scale(1.05);
-    z-index: 1;
+  .tags:hover > a:not(:hover) > div {
+    opacity: 0.6;
   }
 
   a {
