--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -41,8 +41,6 @@ const bg = frontmatter.thumbnail
     filter: blur(5px);
 
     background: var(--bg) no-repeat center / cover;
-
-    transition: width 0.5s ease, height 0.5s ease;
   }
 
   :not(#bg) {
@@ -79,7 +77,7 @@ const bg = frontmatter.thumbnail
     background-position: left;
   }
 
-  p:has(img) {
+  p:has(> img) {
     text-align: center;
   }
 
@@ -154,4 +152,13 @@ const bg = frontmatter.thumbnail
   window.addEventListener("resize", () => {
     backgroundReset()
   })
+
+  const paragraphs = document.querySelectorAll<HTMLParagraphElement>("p")!
+
+  for (const element of paragraphs) {
+    if (element.querySelector("img")) {
+      element.style.textAlign = "center"
+    }
+  }
+  
 </script>
