--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -68,24 +68,17 @@ const socials: LinkButton[] = [
   text-align: left;
   opacity: 0;
   width: 35ch;
-  visibility: hidden;
   transition: opacity 0.2s ease-out, margin-left 0.2s ease-out, visibility 0.2s ease-out
 }
 
-#button-container a {
-  transition: filter 0.2s
-}
-
-#button-container a:hover .desc {
+#button-container > a:hover > .desc {
   opacity: 1;
   margin-left: 0.2rem;
-  visibility: visible;
 }
 
-#button-container a:hover {
-  filter: brightness(140%);
+#button-container > a:hover > button {
+  filter: brightness(150%)
 }
-
 
 #button-container button {
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
@@ -104,7 +97,10 @@ const socials: LinkButton[] = [
   margin: 0.25rem;
 
   cursor: pointer;
+
+  transition: filter 0.2s
 }
+
 @media only screen and (max-width: 1070px) {
   .desc {
     display: none
