not a high schooler anymore lmao

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 <BaseLayout pageTitle="about" display="flex" backgroundStyle="linear-gradient(58deg,rgba(43,99,138,1) 0%,rgba(40,0,62,1) 100%)">
     <h1>About me</h1>
-    <p>Hello, I'm Vlusky. A guy with too many hobbies, a jack of all trade if you will. I can do various things ranging from audio / video production, animation, illustration, design, programming, 3d modelling, and being annoying on twitter. My interests are constantly evolving. As we speak I'm into the D4DJ series (and adjacent), Manga Time Kirara, Blue Archive, Stylized 3D Rendering, and Neovim configuration (I'm still using vscode). My dream is to make a 3DCG Anime out of Spite. Current occupation: 3rd year high school student not doing his homework and instead watches anime all day as a side hustle.</p>
+    <p>Hello, I'm Vlusky. Aspiring computer audio/graphics engineer. The stuff I'm into ranges from audio / video production, animation, illustration, design, programming, 3d modelling, and being annoying on twitter. My interests are constantly evolving. As we speak I'm into the D4DJ series (and adjacent), VOCALOIDs (or any other vocal synths), Manga Time Kirara, Blue Archive, Stylized 3D Rendering, and Linux. My dream is to make a 3DCG Anime out of Spite.</p>
+    <p>Current occupation: <b>chronically online computer engineering student.</b></p>
     <p>I'm highly enthusiastic about the stuff I'm into and will not hesitate to lore dump the entirety of Nightcord at 25:00 to someone given the chance. Hope we can get along!</p>
     <p>If you're wondering, this site is coded by myself with the Astro framework and TypeScript (with a touch of Svelte). Please excuse the bugs as I'm not a professional web dev.</p>
 </BaseLayout>
