social update and also a bunch of other stuf

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -54,6 +54,15 @@ const capitalizeTitle = pageTitle.charAt(0).toUpperCase() + pageTitle.slice(1)
         justify-content: center;
       }
       
+      .flex-center {
+        display: flex;
+        padding-left: 10rem;
+        padding-right: 10rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      
       .f-center {
         align-items:center;
       }
