--- a/src/pages/socials.astro
+++ b/src/pages/socials.astro
@@ -6,6 +6,7 @@ interface LinkButton {
   url: string
   color?: string
   tooltip?: string
+  icon?: string
 }
 
 const socials: LinkButton[] = [
@@ -15,6 +16,7 @@ const socials: LinkButton[] = [
     color:
       "linear-gradient(21deg, rgba(251,0,165,1) 0%, rgba(219,0,0,1) 100%);",
     tooltip: "My long-form reviews + more",
+    icon: "youtube.svg"
   },
   {
     label: "Twitter",
@@ -22,18 +24,28 @@ const socials: LinkButton[] = [
     color:
       "linear-gradient(21deg, rgba(0,123,251,1) 0%, rgba(0,170,219,1) 100%);",
     tooltip: "Short/WIP contents + more (DM's are open)",
+    icon: "twitter.svg"
   },
   /* fuck mastodon {
     label: 'Mastodon',
     url: 'https://mastodon.social/@vlusky_husky',
     color: 'linear-gradient(50deg, rgba(146,78,198,1) 0%, rgba(15,232,245,1) 100%)',
     tooltip: 'Separate Twitter Art Archive'
-  },*/ {
+    },*/ 
+  {
+    label: "Bluesky",
+    url: "https://bsky.app/profile/vlu.bsky.social",
+    color: "linear-gradient(21deg, rgba(82,17,133,1) 0%, rgba(58,58,179,1) 35%, rgba(32,139,254,1) 100%)",
+    tooltip: "One more Twitter alternative istg.",
+    icon: "bsky.svg"
+  },
+  {
     label: "Bandcamp",
     url: "https://vlusky.bandcamp.com/",
     color:
       "linear-gradient(21deg, rgba(79,0,251,1) 0%, rgba(219,0,218,1) 100%);",
     tooltip: "Download/Buy my music",
+    icon: "bandcamp.svg"
   },
   {
     label: "Soundcloud",
@@ -41,6 +53,7 @@ const socials: LinkButton[] = [
     color:
       "linear-gradient(21deg, rgba(251,160,0,1) 0%, rgba(219,55,0,1) 100%);",
     tooltip: "Stream my music",
+    icon: "soundcloud.svg"
   },
   {
     label: "Newgrounds",
@@ -48,13 +61,14 @@ const socials: LinkButton[] = [
     color:
       "linear-gradient(21deg, rgba(251,160,0,1) 0%, rgba(219,213,0,1) 100%)",
     tooltip: "Songs available for use in Geometry Dash",
+    icon: "newgrounds.svg"
   },
 ]
 ---
 
 <BaseLayout
   pageTitle="socials"
-  display="full-screen flex"
+  display="full-screen flex-center"
   backgroundStyle="linear-gradient(135deg,rgba(0,0,0,1) 0%,rgba(4,2,113,1) 100%)"
 >
   <div id="button-container">
@@ -65,10 +79,16 @@ const socials: LinkButton[] = [
           href={button.url || "https://www.youtube.com/watch?v=dQw4w9WgXcQ"}
         >
           <button style={{ background: button.color }}>
-            <span>{button.label}</span>
+            <span class="button-label">{button.label}</span>
+            <!--
+            <object class={"button-icon " + button.label.toLowerCase()} type="image/svg+xml" data={button.icon || "circle.svg"}></object>
+            -->
+            <img class={"button-icon " + button.label.toLowerCase()} src={button.icon || "circle.svg"} />
           </button>
+          <!--
           <span class="desc">{button.tooltip}</span>
           <br />
+          -->
         </a>
       ))
     }
@@ -78,22 +98,10 @@ const socials: LinkButton[] = [
 <style>
   #button-container {
     text-align: center;
-    width: 100%;
-  }
-
-  .desc {
-    position: absolute;
-    z-index: 1;
-    text-align: left;
-    opacity: 0;
-    width: 35ch;
-    transition: opacity 0.2s ease-out, margin-left 0.2s ease-out,
-      visibility 0.2s ease-out;
-  }
-
-  #button-container > a:hover > .desc {
-    opacity: 1;
-    margin-left: 0.2rem;
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: auto /* what */;
   }
 
   #button-container > a:hover > button {
@@ -103,15 +111,15 @@ const socials: LinkButton[] = [
   #button-container button {
     font-family: "Poppins", Helvetica, Arial, sans-serif;
     font-size: 1.2rem;
-    height: 4rem;
-    width: 100%;
-    max-width: 20rem;
+    height: 12rem;
+    width: 12rem;
     border: none;
     box-shadow: 2px 2px 4px black;
     color: white;
 
-    text-align: center;
+    text-align: left;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.616);
+    position: relative;
 
     padding: 0.5rem;
     margin: 0.25rem;
@@ -119,6 +127,23 @@ const socials: LinkButton[] = [
     cursor: pointer;
 
     transition: filter 0.2s;
+  }
+
+  .button-label {
+    position: absolute;
+    bottom: 0.25rem;
+  }
+
+  .button-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 3rem;
+  }
+
+  .soundcloud {
+    height: 4rem !important;
   }
 
   @media only screen and (max-width: 1070px) {
