update works list and tagline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
       />
     </g>
   </svg>
-  <span id="subtext" class="text-shadow">Animator by day, Anituber by night</span>
+    <span id="subtext" class="text-shadow">Born to art, forced to code.</span>
 </BaseLayout>
 
 <script>
