--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -34,9 +34,9 @@ import * as gallery from "./worksList"
     client:idle
   />
   <Gallery
-    kind="soundcloud"
+    kind="youtube"
     title="Music"
-    elements={gallery.songs}
+    elements={gallery.songsNew}
     bg="linear-gradient(90deg, rgba(2,153,40,1) 0%, rgba(0,179,135,1) 100%)"
     client:idle
   />
